--- a/starter/app/src/main/res/navigation/navigation.xml
+++ b/starter/app/src/main/res/navigation/navigation.xml
@@ -7,8 +7,8 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.udacity.shoestore.login.LoginFragment"
-        android:label="fragment_login"
-        tools:layout="@layout/fragment_login" >
+        android:label="Login"
+        tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_welcomeFragment"
             app:destination="@id/welcomeFragment" />
@@ -16,8 +16,8 @@
     <fragment
         android:id="@+id/welcomeFragment"
         android:name="com.udacity.shoestore.welcome.WelcomeFragment"
-        android:label="fragment_welcome"
-        tools:layout="@layout/fragment_welcome" >
+        android:label="Welcome"
+        tools:layout="@layout/fragment_welcome">
         <action
             android:id="@+id/action_welcome_to_instruction"
             app:destination="@id/instructionFragment" />
@@ -25,6 +25,35 @@
     <fragment
         android:id="@+id/instructionFragment"
         android:name="com.udacity.shoestore.instruction.InstructionFragment"
-        android:label="fragment_instruction"
-        tools:layout="@layout/fragment_instruction" />
+        android:label="Instructions"
+        tools:layout="@layout/fragment_instruction">
+        <action
+            android:id="@+id/action_instruction_to_videogamelist"
+            app:destination="@id/videoGamesListFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/videoGamesListFragment"
+        android:name="com.udacity.shoestore.videogamelist.VideoGamesListFragment"
+        android:label="VideoGameList"
+        tools:layout="@layout/fragment_videogames_list" >
+        <action
+            android:id="@+id/action_logout"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/add_videogame"
+            app:destination="@id/descriptionFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/descriptionFragment"
+        android:name="com.udacity.shoestore.description.DescriptionFragment"
+        android:label="Description"
+        tools:layout="@layout/fragment_description" >
+        <action
+            android:id="@+id/action_to_videogame_list"
+            app:destination="@id/videoGamesListFragment"
+            app:popUpTo="@id/videoGamesListFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
